# Odds

./: Notes.md  devigger_helper.py  notes.txt  pyproject.toml  simple_odds_calculation  testBench.py
firstTouchdown/: firstTouchdown.py
