[project]
name = "odds"
version = "0.1.0"
description = "odds calculation script"
authors = [
    {name = "ps0505",email = "pranavsaboo01@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
